conformance/tests/gateway-optional-address-value.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-without-address-value
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  addresses:
  - type: "IPAddress"
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
